added endpoint to serve photos in backend, updated openapis, tested. Need to change a bit of logic in retrieving photos from backend to frontend and sort efficiently by date (stream must retrieve a photoarray unsorted to be sorted in frontend instead)
